blocks/header/header.css
/* ... */
/* legacy submenu ends above, new mega-menu starts below */
header .nav-sections .nav-mega {
  display: flex;
  flex-direction: column;
}

header .nav-sections .nav-category {
  display: grid;
  grid-template-columns: 1fr 48px;
  align-items: center;
}

header .nav-sections ul > li.nav-category {
  border-top: 1px solid var(--color-gray-400);
}

header .nav-sections .nav-categories > .nav-category:last-child {
  border-bottom: 1px solid var(--color-gray-400);
}

header .nav-sections .nav-category ul > li {
  border: none;
  padding: 0;
}

header .nav-sections .nav-category ul > li a {
  display: block;
  padding: 0.5em 0;
}

header .nav-sections .nav-category a:hover,
header .nav-sections .nav-category a:focus-visible {
  text-decoration: underline;
}

header .nav-sections .nav-category p {
  grid-column: 1;
  margin: 0;
  padding: var(--spacing-100) 0;
  font-weight: bold;
  letter-spacing: var(--letter-spacing-s);
  text-transform: uppercase;
  cursor: pointer;
}

header .nav-sections .nav-category button.submenu-toggle {
  grid-column: 2;
  cursor: pointer;
}

header .nav-sections .nav-category button[aria-expanded="true"] i.symbol-chevron {
  transform: rotate(225deg);
}

header .nav-sections .nav-category > ul {
  grid-column: 1 / span 2;
}

header .nav-sections .nav-category ul > li > strong > a {
  font-weight: bold;
  text-decoration: underline;
  text-underline-offset: var(--spacing-20);
}

header .nav-sections .nav-category ul > li > strong > a::after {
  content: '';
  display: inline-block;
  width: 6px;
  height: 6px;
  margin-left: var(--spacing-60);
  border: 1.5px solid transparent;
  border-top-color: currentcolor;
  border-right-color: currentcolor;
  border-radius: var(--rounding-s);
  transform: rotate(45deg);
}

header .nav-sections .nav-category ul > li em {
  display: inline-block;
  margin-left: 1ch;
  border-radius: var(--rounding-s);
  padding: 0 0.75em;
  background-color: var(--color-charcoal);
  color: var(--color-white);
  font-size: var(--detail-size-s);
  font-style: normal;
  font-weight: bold;
  text-transform: uppercase;
}

@media (width >= 1000px) {
  header .nav-sections nav > ul > li.submenu-wrapper > [aria-expanded="true"] + div.nav-mega {
    display: grid;
    grid-template-columns: 4fr 1fr;
    gap: var(--spacing-xl);
  }

  header .nav-sections .nav-categories {
    column-count: 4;
    column-gap: var(--spacing-xl);
  }

  header .nav-sections ul > li.nav-category {
    display: block;
    margin-top: var(--spacing-200);
    border-top: 0;
    padding: 0;
    break-inside: avoid;
  }

  header .nav-sections .nav-categories .nav-category ul > li {
    padding: 0;
  }

  header .nav-sections .nav-category:first-child {
    margin-top: 0;
  }

  header .nav-sections .nav-categories > .nav-category:last-child {
    border-bottom: 0;
  }

  header .nav-sections .nav-category button.submenu-toggle {
    display: none;
  }

  header .nav-sections .nav-category p {
    padding-top: 0;
    border-bottom: 1px solid var(--color-gray-400);
    cursor: default;
  }

  header .nav-sections .nav-category > ul {
    padding: var(--spacing-100) 0 0;
  }
}

/* promo */
header .nav-sections .nav-promo {
  padding: var(--spacing-200);
}

@media (width < 1000px) {
  header .nav-sections .nav-promo {
    order: -1;
  }
}

header .nav-sections .nav-promo h2 {
  font-family: var(--body-font-family);
  font-size: var(--heading-size-l);
  font-weight: bold;
}

header .nav-sections .nav-promo img {
  aspect-ratio: 16 / 9;
  border-radius: var(--rounding-m);
  object-fit: cover;
}

header .nav-sections .nav-promo .button-wrapper .button {
  width: 100%;
}

header .nav-sections .nav-promo .button-wrapper .button::after {
  content: '';
  display: inline-block;
  width: 6px;
  height: 6px;
  margin-left: var(--spacing-60);
  border: 1.5px solid transparent;
  border-top-color: currentcolor;
  border-right-color: currentcolor;
  border-radius: var(--rounding-s);
  transform: rotate(45deg);
}

@media (width >= 1000px) {
  header .nav-sections .nav-promo {
    padding: 0;
  }

  header .nav-sections .nav-promo img {
    aspect-ratio: unset;
  }
}

/* tools */
header .nav-tools {
  grid-area: tools;
  width: 100%;
  text-align: center;
}

header .nav-tools ul {
  display: flex;
  justify-content: space-between;
  align-items: start;
  gap: var(--spacing-40);
}

header .nav-tools > div > ul > li {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  min-width: 0;
}

header .nav-cart li a.icon-wrapper,
header .nav-tools li a.icon-wrapper {
  display: flex;
  flex-direction: column;
}

@media (width >= 1000px) {
  header .nav-tools ul {
    gap: var(--spacing-40);
  }

  header .nav-tools ul > li {
    width: 60px;
  }
}

@media (width >= 1400px) {
  header .nav-tools ul > li {
    width: 80px;
  }
}

/* language selector */
header .nav-tools .nav-tools-language {
  position: relative;
}

header .nav-tools .nav-tools-language button {
  gap: var(--spacing-s);
  position: relative;
  border: 1px solid transparent;
  padding: var(--spacing-80) 1vw;
  color: inherit;
  font-size: var(--detail-size-xs);
  cursor: pointer;
}

header .nav-tools .nav-tools-language button::after {
  content: '';
  position: absolute;
  top: 32px;
  left: var(--spacing-20);
  transform: rotate(45deg);
  width: 8px;
  height: 8px;
  border: 1.5px solid transparent;
  border-right-color: currentcolor;
  border-bottom-color: currentcolor;
  border-radius: var(--rounding-s);
  transition: transform 0.2s, left 0.2s;
}

header .nav-tools .nav-tools-language button[aria-expanded='true'] {
  border-color: var(--color-gray-700);
  border-bottom-color: var(--color-background);
  z-index: 3;
}

header .nav-tools .nav-tools-language button[aria-expanded='true']::after {
  left: calc(4px + var(--spacing-20));
  transform: rotate(-135deg) translateY(-50%);
}
/* ... */

